# ChromaToolPy

./: .gitignore  A0_01.csv  DLLME_chroma_contours.py  LICENSE  OOP.md  PDA_analysis.py  README.md  TASKS.md  basics_func.py  calibration_curve_merge.py  calibration_curve_params.py  central_diff_pd_test.py  chat_gpt_test.py  chrom-test1.csv  chrom-test2.csv  chroma-plot.py  chroma_corrector.py  chroma_plot.py  chroma_plot3.py  chroma_plot_by_replicate.py  chroma_plot_by_sample.py  chroma_plots.py  chroma_rename.py  chromatogram_corrector.py  classes.py  classes_obsolete.py  convolve_test.py  cosmo_bar_plot.py  data_show.py  find_peak_scipy.py  func_canvas.py  function_tests.py  hg_analytes_plot.py  main.py  merge_channels.py  merge_peak_info.py  merged_data.py  mvc_c1.py  peak_integration.py  peak_inter_function test.py  (+7 more)
DLLME_Chromatograms/: men1_lid1_noPCB.txt
GWR project/: TEST__13102023 ACTN_test_012 (01).csv  TEST__13102023 ACTN_test_012 (PDA).txt  TEST__13102023 CAF_test_007 (01).csv  TEST__13102023 CAF_test_007 (PDA).txt  TEST__13102023 mix_test_017 (01).csv  TEST__13102023 mix_test_017 (PDA).txt  TEST__20102023 BPA_002 (01).csv  TEST__20102023 DEHP_001 (01).csv  TEST__20102023 bpa_011 (01).csv  TEST__20102023 mix_003 (01).csv  TEST__20102023 mix_003 (PDA).txt  TEST__20102023 mix_004 (01).csv  TEST__20102023 mix_004 (PDA).txt  TEST__20102023 mix_005 (01).csv  TEST__20102023 mix_005 (PDA).txt  TEST__20102023 mix_006 (01).csv  TEST__20102023 mix_006 (PDA).txt  TEST__20102023 mix_007 (01).csv  TEST__20102023 mix_007 (PDA).txt
chroma_display/: chroma_plot.py
(+64 files in other folders)
